# multi-agent-routing-app

./: .gitattributes  .gitignore  2026-01-26-implement-the-following-plan.txt  2026-01-28-test-my-masfro-backend-app-using-bash-to-test-it.txt  AGENTS_ANALYSIS_REPORT.md  AGENTS_DETAILED_REVIEW.md  AGENT_DATA_VISUALIZATION.md  BACKEND_IMPLEMENTATION.md  CLAUDE.md  COLOR_REFERENCE.md  EXPERIMENTAL_DESIGN.md  FLOOD_MAP_ALIGNMENT_FIX.md  GITHUB_ISSUES.md  GRAPH_RISK_QUICK_FIX.md  GRAPH_SAMPLING_FIX.md  GRAPH_VISUALIZATION_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LEARNING_ROADMAP.md  LOGGING_IMPROVEMENTS.md  PHASE_2.5_COMPLETION.md  PHASE_4_WEBSOCKET_COMPLETE.md  PRESENTATION_VERIFICATION_REPORT.md  Project To Do List.md  README.md  ROUTING_STATUS_ANALYSIS.md  SIMULATION_FIXES_APPLIED.md  TEST_LOGGING.md  TODO.md  WEBSOCKET_DEMO.md  analyze_weights.py  implementationplan.md  plan.md  test  test-backend-connection.html  test-simulation-fixes.ps1  test-websocket.html
masfro-backend/: .coverage  .env.example  .gitignore  AGENT_INTEGRATION_STATUS.md  CLAUDE.md  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETE.md  FIX_SCOUT_COORDINATES.md  LOCATION_GEOCODER_CSV_UPGRADE.md  PHASE_3_COMPLETION.md  QUICKSTART.md  README.md  ROUTING_CONFIG.md  SCOUT_AGENT_MAS_MIGRATION.md  TESTING_GUIDE.md  TEST_FILES_ANALYSIS.md  TEST_ORGANIZATION_COMPLETE.md  TODO.md  count_loc.py  main.py  pyproject.toml  run_data_collector.py  test_integration.py  test_mock_integration.py  verify_graph_size.py
masfro-backend-v2/: .env.example  .gitignore  alembic.ini  pyproject.toml  run_standalone_agent.py  test_advisory_pipeline.py  test_evacuation_nlp.py  test_geocoder_batch.py  test_geocoder_only.py  test_llm_integration.py  test_llm_real.py  test_routing_comparison.py  test_routing_explanation.py  test_rss_advisory.py  test_scout_fusion.py  test_scout_real.py  test_smart_api.py  test_vision_batch.py
masfro-backend-v2/.claude/: settings.local.json
masfro-backend-v2/app/: main.py
masfro-backend-v2/config/: agents.yaml
masfro-backend-v2/mock_server/: __init__.py  data_store.py  main.py
masfro-backend-v2/scripts/: check_geocoder.py  visualize_flood_map.py
masfro-backend-v2/tests/: __init__.py  backend_test_report.md
masfro-backend/.claude/: settings.local.json
masfro-backend/alembic/: env.py
masfro-backend/app/: exceptions.py  main.py
masfro-backend/config/: agents.yaml  default.yaml
masfro-backend/docs/: 1000_ROUTES_ANALYSIS.md  AGENT_VALIDATION_REPORT.md  BATCH_PROCESSING_OPTIMIZATION.md  (+28 more)
(+473 files in other folders)
