[project]
name = "masfro-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "osmnx>=2.0.6",
    "selenium>=4.36.0",
    "uvicorn>=0.37.0",
    "webdriver-manager>=4.0.2",
]
