[project]
name = "masfro-backend"
version = "0.1.0"
description = "Multi-Agent System for Flood Route Optimization Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "osmnx>=2.0.6",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "uvicorn>=0.37.0",
    "webdriver-manager>=4.0.2",
    "python-dotenv>=1.0.1",
    "bs4>=0.0.2",
    "scikit-learn>=1.3.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
